🐛 Fix: Studio form placeholder not showing invitation data

--- a/src/features/Onboarding/Onboarding.scss
+++ b/src/features/Onboarding/Onboarding.scss
@@ -463,7 +463,7 @@
     .form-group{
         display: grid;
         justify-items: start;
-        margin-bottom: 8px*18;
+        margin-bottom: 8px*14;
         margin-top: 8px*0;
         input{
             height: 4rem;
